manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-penko
  namespace: penkospace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app-penko
  template:
    metadata:
      labels:
        app: web-app-penko
    spec:
      containers:
      - name: web-app-penko
        image: penkowebappregistry.azurecr.io/web-app-penko:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-credentials
