manifest/production-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-penko-production
  namespace: production
spec:
  selector:
    app: web-app-penko-production
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
