manifest/staging-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-penko-staging
  namespace: staging
spec:
  selector:
    app: web-app-penko-staging
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
